dropdown gap fixed

--- a/src/components/filter/Filter.scss
+++ b/src/components/filter/Filter.scss
@@ -31,7 +31,6 @@
 .filter-dropdown {
   color: var(--primary-white);
   position: absolute;
-  top: 4em;
   background: var(--background-color-light);
   margin-top: 0.5em;
   border: 1px solid var(--dropdowns);
